Merge branch 'CORE-632' into 2025R4